Compare apps page

--- a/cmd/webserver/assets/sass/index.scss
+++ b/cmd/webserver/assets/sass/index.scss
@@ -9,6 +9,7 @@
 //@import "third-party/pace";
 @import "admin";
 @import "apps_random";
+@import "apps_compare";
 @import "api";
 @import "app";
 @import "apps";
