Show more player links

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -13,6 +13,8 @@
 
             <small>
                 <a target="_blank" rel="noopener" href="{{ .Player.CommunityLink }}"><i class="fab fa-steam-square"></i> Steam Community Profile</a>
+                <a href="{{ .Player.GetFriendLink }}"><i class="fab fa-steam-square"></i> Add to Friends</a>
+                <a href="{{ .Player.GetMessageLink }}"><i class="fab fa-steam-square"></i> Send Message</a>
             </small>
 
         </div>
