--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -18,7 +18,7 @@
                         <a class="nav-link active" data-toggle="tab" href="#popular" role="tab">Popular Apps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#apps" role="tab">All Apps</a>
+                        <a class="nav-link" data-toggle="tab" href="#all" role="tab">All Apps</a>
                     </li>
                     <li class="nav-item d-none">
                         <a class="nav-link" data-toggle="tab" href="#steam" role="tab">Steam News</a>
@@ -60,15 +60,30 @@
                     </div>
 
                     {{/* All news */}}
-                    <div class="tab-pane" id="apps" role="tabpanel">
+                    <div class="tab-pane" id="all" role="tabpanel">
+
+                        <div class="row">
+                            <div class="d-none">
+                                {{/* This div is so Chrome auto-fills this one and not the rest! */}}
+                                <label for="hidden">Hidden</label>
+                                <select multiple data-placeholder="Hidden" class="form-control form-control-chosen" id="hidden" name="hidden">
+                                </select>
+                            </div>
+                            <div class="col-sm-6 col-md-4">
+                                <div class="form-group">
+                                    <label for="search">Search</label>
+                                    <input class="form-control" type="search" placeholder="Search" id="search" name="search" data-col-sort="2">
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" id="news-table" data-ordering="false" data-path="/news/news.json">
+                            <table class="table table-hover table-striped table-counts mb-0" id="news-table" data-path="/news/news.json">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col">Game</th>
-                                    <th scope="col">Title</th>
+                                    <th scope="col">Article</th>
                                     <th scope="col">Date</th>
+                                    <th scope="col">Score</th>
                                 </tr>
                                 </thead>
                                 <tbody>
