Link to SteamPeek

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -252,6 +252,8 @@
 
                                                 <h6><a href="https://www.achievementstats.com/index.php?action=games&gameId={{ .App.ID }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Achievement Stats</a></h6>
 
+                                                <h6><a href="https://steampeek.hu/?appid={{ .App.ID }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on SteamPeek</a></h6>
+
                                                 {{/*<h6><a href="https://steamhunters.com/stats/{{ .App.ID }}/achievements" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Steam Hunters</a></h6>*/}}
 
                                             </td>
