Put info text into cards

--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -12,93 +12,112 @@
         <div class="card">
             <div class="card-body">
 
-                <h5>Game DB</h5>
-                <ul>
-                    <li>Game DB has been my hobby since 2015.</li>
-                    <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
-                    <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">Steam PICS</a>.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Game DB</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Game DB has been my hobby since 2015.</li>
+                            <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
+                            <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">Steam PICS</a>.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Apps (Games)</h6>
-                <ul>
-                    <li>Apps are updated instantly when the developer makes a change.</li>
-                    <li>App review scores are calculated using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a>.</li>
-                    <li>App twitch counts only include the 100 streamers for that app.</li>
-                    <li>App trends are currently calculated use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Players</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Players are updated when they are looked at, or automatically for donators.</li>
+                            <li>Player ranks are calculated only from players on Game DB.</li>
+                            <li>Player ranks are calculated started at midnight UTC and can take some time to finish processing.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Badges</h6>
-                <ul>
-                    <li>Player badges are updated when the player is updated.</li>
-                    <li>Values on the badges page are updated daily.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Games</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Apps are updated instantly when the developer makes a change.</li>
+                            <li>App review scores are calculated using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a>.</li>
+                            <li>App twitch counts only include the 100 streamers for that app.</li>
+                            <li>App trends are currently calculated use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Bundles</h6>
-                <ul>
-                    <li>Bundles are updated when an app in the bundle is updated.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Groups</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once per six hours.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Changes</h6>
-                <ul>
-                    <li>Changes are updated instantly when the developer makes a change.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Badges</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Player badges are updated when the player is updated.</li>
+                            <li>Values on the badges page are updated daily.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Groups</h6>
-                <ul>
-                    <li>Groups are updated when a player in the group is updated, or when the group page is looked at. Limited to once per six hours.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Packages</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Packages are updated instantly when the developer makes a change.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>News Articles</h6>
-                <ul>
-                    <li>News articles are added when the app is updated.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Bundles</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Bundles are updated when an app in the bundle is updated.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Packages</h6>
-                <ul>
-                    <li>Packages are updated instantly when the developer makes a change.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Sale</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Sales are updated when the app on sale is updated.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Players</h6>
-                <ul>
-                    <li>Players are updated when they are looked at, or automatically for donators.</li>
-                    <li>Player ranks are calculated only from players on Game DB.</li>
-                    <li>Player ranks are calculated started at midnight UTC and can take some time to finish processing.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">Changes</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Changes are updated instantly when the developer makes a change.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Sale</h6>
-                <ul>
-                    <li>Sales are updated when the app on sale is updated.</li>
-                </ul>
+                <div class="card mb-3">
+                    <h5 class="card-header">News Articles</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>News articles are added when the app is updated.</li>
+                        </ul>
+                    </div>
+                </div>
 
-                <h6>Stats</h6>
-                <ul>
-                    <li>Tag, Genre, Category, Publisher & Developer pages are all updated at midnight.</li>
-                </ul>
-
-                <!--
-                <h5>Why did I make Game DB?</h5>
-                <p>Game DB was created as a way to learn certain technologies involved in making websites and goes back to 2015. Originally it was to track players and rank them.
-                    Then I started to track other bits of information that the <a href="/steam-api">Steam APIs</a> gave.
-                    Then started to track as much as I could, all to display in a friendly manner for gamers.</p>
-
-                <h5 id="trend-score">How is the app trend value calculated</h5>
-                <p>The algorithm is taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a> and is likely to change.</p>
-
-                <h5>Why is a player missing?</h5>
-                <p>Game DB only knows about players that are added manually. If you are missing, you can add your profile or login to do it automatically.</p>
-
-                <h5>Why does a player have no rank?</h5>
-                <p>
-                    Ranks get updated daily, so please check back tomorrow. If it has been longer, it may be because your privacy settings stop us from seeing your information.
-                    You can allow access by updating your <a target="_blank" rel="noopener" href="https://steamcommunity.com/my/edit/settings">privacy settings</a>.
-                </p>
-
-                <h5>How are Twitch streamers calculated</h5>
-                <p>Only the viewers from the top 100 streamers are included in the counts on Game DB.</p>
-
-                <h5 id="app-scores">How are app scores calculated?</h5>
-                <p>Using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a></p>
-                -->
+                <div class="card mb-0">
+                    <h5 class="card-header">Stats</h5>
+                    <div class="card-body">
+                        <ul class="mb-0">
+                            <li>Tag, Genre, Category, Publisher & Developer pages are all updated at midnight.</li>
+                        </ul>
+                    </div>
+                </div>
 
             </div>
         </div>
