--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -9,10 +9,6 @@
 
             <h1 class="text-truncate"><i class="fas fa-gamepad"></i> {{ .App.GetName }}</h1>
 
-            {{ if ne .Description "" }}
-                <p class="lead">{{ .Description }}</p>
-            {{ end }}
-
             <small>
                 <a href="{{ .App.GetStoreLink }}" target="_blank" rel="noopener" class="mr-2">
                     <i class="fas fa-shopping-cart"></i> Store Page
@@ -121,7 +117,7 @@
                         {{/*<img class="rounded{{if or (gt (len .App.Screenshots) 0) (gt (len .App.Movies) 0)}} cursor-pointer{{ end }}" src="{{ .App.GetHeaderImage }}" alt="{{ .App.GetName }}">*/}}
 
                         <div class="row">
-                            <div class="col-12 col-lg-6">
+                            <div class="col-12 col-lg-7">
 
                                 <div class="table-responsive">
                                     <table class="table mb-0">
@@ -239,26 +235,6 @@
                                             </tr>
                                         {{ end }}
 
-                                        <tr>
-                                            <th scope="row">Links</th>
-                                            <td>
-                                                {{ if ne .App.TwitchURL "" }}
-                                                    <h6><a href="https://twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Twitch</a></h6>
-                                                {{ end }}
-
-                                                {{ if ne .App.GetSteamPricesURL "" }}
-                                                    <h6><a href="https://steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Steam Prices</a></h6>
-                                                {{ end }}
-
-                                                <h6><a href="https://www.achievementstats.com/index.php?action=games&gameId={{ .App.ID }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Achievement Stats</a></h6>
-
-                                                <h6><a href="https://steampeek.hu/?appid={{ .App.ID }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on SteamPeek</a></h6>
-
-                                                {{/*<h6><a href="https://steamhunters.com/stats/{{ .App.ID }}/achievements" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Steam Hunters</a></h6>*/}}
-
-                                            </td>
-                                        </tr>
-
                                         {{ if ne .App.GetMicroTrailer "" }}
                                             <tr>
                                                 <th scope="row">Micro Trailer</th>
@@ -271,49 +247,61 @@
                                             </tr>
                                         {{ end }}
 
+                                        <tr>
+                                            <th scope="row">Description</th>
+                                            <td><small>{{ .Description }}</small></td>
+                                        </tr>
+
                                     </table>
                                 </div>
 
                             </div>
-                            <div class="col-12 col-lg-6">
+                            <div class="col-12 col-lg-5">
 
                                 <div class="table-responsive">
                                     <table class="table mb-0">
 
                                         {{ if gt (len .Genres) 0 }}
-                                            <tr>
-                                                <th scope="row" nowrap="nowrap" class="thin">Genres</th>
-                                                <td>
-                                                    {{ range $key, $value := .Genres }}
-                                                        <a class="badge badge-success" href="/games?genres={{ .ID }}">{{ .GetName }}</a>
-                                                    {{ end }}
-                                                </td>
-                                            </tr>
+                                            <h6 class="mb-0">Genres</h6>
+                                            <div class="mb-3">
+                                                {{ range $key, $value := .Genres }}
+                                                    <a class="badge badge-success" href="/games?genres={{ .ID }}">{{ .GetName }}</a>
+                                                {{ end }}
+                                            </div>
                                         {{ end }}
 
                                         {{ if gt (len .App.Categories) 0 }}
-                                            <tr>
-                                                <th scope="row" nowrap="nowrap" class="thin">Categories</th>
-                                                <td>
-                                                    {{ range $key, $value := .Categories }}
-                                                        <a class="badge badge-success" href="/games?categories={{ .ID }}">{{ .GetName }}</a>
-                                                    {{ end }}
-                                                </td>
-                                            </tr>
+                                            <h6 class="mb-0">Categories</h6>
+                                            <div class="mb-3">
+                                                {{ range $key, $value := .Categories }}
+                                                    <a class="badge badge-success" href="/games?categories={{ .ID }}">{{ .GetName }}</a>
+                                                {{ end }}
+                                            </div>
                                         {{ end }}
 
-                                        <tr>
-                                            <th scope="row" nowrap="nowrap" class="thin">Tags</th>
-                                            <td>
-                                                <div id="tags">
-                                                    {{ range $key, $value := .App.TagCounts }}
-                                                        <div style="width: {{ percent .Count $.TagsMax }}%;"></div>
-                                                        <a class="float-left" href="/games?tags={{ .ID }}">{{ .Name }}</a>
-                                                        <span class="float-right">{{ comma .Count }} <i class="fas fa-thumbs-up"></i></span>
-                                                    {{ end }}
-                                                </div>
-                                            </td>
-                                        </tr>
+                                        <h6 class="mb-1">Tags</h6>
+                                        <div id="tags" class="mb-3 clearfix">
+                                            {{ range $key, $value := .App.TagCounts }}
+                                                <div style="width: {{ percent .Count $.TagsMax }}%;"></div>
+                                                <a class="float-left" href="/games?tags={{ .ID }}">{{ .Name }}</a>
+                                                <span class="float-right">{{ comma .Count }} <i class="fas fa-thumbs-up"></i></span>
+                                            {{ end }}
+                                        </div>
+
+
+                                        <h6 class="mb-1">Links</h6>
+                                        <div id="links" class="mb-3">
+
+                                            {{ if ne .App.TwitchURL "" }}
+                                                <h6><a href="https://twitch.tv/directory/game/{{ pathEscape .App.TwitchURL }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Twitch</a></h6>
+                                            {{ end }}
+                                            {{ if ne .App.GetSteamPricesURL "" }}
+                                                <h6><a href="https://steamprices.com/{{ .App.GetSteamPricesURL }}/{{ .App.ID }}/{{ slug .App.GetName }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Steam Prices</a></h6>
+                                            {{ end }}
+                                            <h6><a href="https://www.achievementstats.com/index.php?action=games&gameId={{ .App.ID }}" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Achievement Stats</a></h6>
+                                            <h6><a href="https://steampeek.hu/?appid={{ .App.ID }}" target="_blank" rel="noopener">Check similar {{ .App.GetTypeLower }}s on SteamPeek</a></h6>
+                                            <h6><a href="https://steamhunters.com/stats/{{ .App.ID }}/achievements" target="_blank" rel="noopener">View {{ .App.GetTypeLower }} on Steam Hunters</a></h6>
+                                        </div>
 
                                     </table>
                                 </div>
