--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -78,7 +78,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" id="news-table" data-path="/news/news.json">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="articles" id="news-table" data-path="/news/news.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Article</th>
