--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/players/players.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/players/players.json" data-row-type="players">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">#</th>
