--- a/cmd/webserver/templates/product_keys.gohtml
+++ b/cmd/webserver/templates/product_keys.gohtml
@@ -45,7 +45,7 @@
                     <div class="tab-pane show active" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-order='[[2, "desc"]]' id="apps-table" data-limit="1000">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="app keys" data-order='[[2, "desc"]]' id="apps-table" data-limit="1000">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Field</th>
@@ -71,7 +71,7 @@
                     <div class="tab-pane" id="packages" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-order='[[2, "desc"]]' id="packages-table" data-limit="1000">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="package keys" data-order='[[2, "desc"]]' id="packages-table" data-limit="1000">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Field</th>
@@ -155,7 +155,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-path="/product-keys/product-keys.json" id="search-table">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="keys" data-path="/product-keys/product-keys.json" id="search-table">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" nowrap="nowrap">Game</th>
