--- a/cmd/webserver/templates/settings.gohtml
+++ b/cmd/webserver/templates/settings.gohtml
@@ -201,7 +201,7 @@
                     <div class="tab-pane" id="donations" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-order='[[0, "desc"]]' data-path="/settings/donations.json">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="donations" data-order='[[0, "desc"]]' data-path="/settings/donations.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Date</th>
@@ -220,7 +220,7 @@
                     <div class="tab-pane" id="events" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-counts mb-0" data-order='[[0, "desc"]]' data-path="/settings/events.json">
+                            <table class="table table-hover table-striped table-counts mb-0" data-row-type="events" data-order='[[0, "desc"]]' data-path="/settings/events.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">Date</th>
