--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -35,7 +35,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/achievements/achievements.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-path="/achievements/achievements.json" data-row-type="achievements">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Name</th>
