--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -146,7 +146,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/games/games.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/games.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">#</th>
