--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -45,7 +45,7 @@
                 <div class="mb-4">{{ .Summary }}</div>
 
                 <h5>Game DB players in {{ .Group.Abbr }}</h5>
-                <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-ordering="false">
+                <table class="table table-hover table-striped table-counts mb-0" data-path="/groups/{{ .Group.ID }}/table.json" id="players" data-row-type="players" data-ordering="false">
                     <thead class="thead-light">
                     <tr>
                         <th class="thin">Flag</th>
