--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts" data-path="/groups/groups.json">
+                    <table class="table table-hover table-striped table-counts" data-row-type="groups" data-path="/groups/groups.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" class="thin">#</th>
