--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/games/new-releases/new-releases.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/new-releases/new-releases.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App</th>
