--- a/cmd/webserver/templates/packages.gohtml
+++ b/cmd/webserver/templates/packages.gohtml
@@ -92,7 +92,7 @@
 
                 {{/* Packages List */}}
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts" data-path="/packages/packages.json">
+                    <table class="table table-hover table-striped table-counts" data-row-type="packages" data-path="/packages/packages.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Name</th>
