--- a/cmd/webserver/templates/price_changes.gohtml
+++ b/cmd/webserver/templates/price_changes.gohtml
@@ -55,7 +55,7 @@
                 </form>
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-counts mb-0" data-path="/price-changes/price-changes.json">
+                    <table class="table table-hover table-counts mb-0" data-row-type="price changes" data-path="/price-changes/price-changes.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App / Package</th>
