--- a/cmd/webserver/templates/trending_apps.gohtml
+++ b/cmd/webserver/templates/trending_apps.gohtml
@@ -16,7 +16,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts mb-0" data-path="/games/trending/trending.json">
+                    <table class="table table-hover table-striped table-counts mb-0" data-row-type="games" data-path="/games/trending/trending.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App</th>
