Upgrade app compare page

--- a/cmd/webserver/assets/sass/_apps_compare.scss
+++ b/cmd/webserver/assets/sass/_apps_compare.scss
@@ -1,5 +1,5 @@
 #apps-compare-page {
-    #group-chart, #players-chart, #players-chart2 {
+    #group-chart, #players-chart, #players-chart2, #score-chart {
         height: 300px;
     }
 
