--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -149,6 +149,7 @@
                             <a class="dropdown-item" href="/games/achievements">Most Achievements</a>
                             <a class="dropdown-item" href="/games/wishlists">Most Wishlists</a>
                             <a class="dropdown-item" href="/games/random">Random Game</a>
+                            <a class="dropdown-item" href="/games/compare">Compare Games</a>
 
                             <div class="dropdown-divider"></div>
 
