--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -150,17 +150,13 @@
                             <a class="dropdown-item" href="/games/wishlists">Most Wishlists</a>
                             <a class="dropdown-item" href="/games/random">Random Game</a>
                             <a class="dropdown-item" href="/games/compare">Compare Games</a>
-
+                            <a class="dropdown-item" href="/games/coop">Co-op Finder</a>
                             <div class="dropdown-divider"></div>
 
                             <a class="dropdown-item" href="/packages">Packages</a>
                             <a class="dropdown-item" href="/bundles">Bundles</a>
                             <a class="dropdown-item" href="/price-changes">Price Changes</a>
                             <a class="dropdown-item" href="/changes">Library Changes</a>
-
-                            <div class="dropdown-divider"></div>
-
-                            <a class="dropdown-item" href="/coop">Co-op Games</a>
 
                         </div>
                     </li>
